fixed horizontal scrolling

--- a/navbar.css
+++ b/navbar.css
@@ -30,3 +30,14 @@
   font-weight: bold;
   font-size: 22px;
 }
+
+
+@media only screen and (max-width: 1200px) {
+  #navbar{
+    filter: drop-shadow(0 5px 0 rgba(0, 255, 255, 1))
+  }
+
+
+
+
+}
